# baxter_teleoperation

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  baxter_teleop.rosinstall  baxter_teleoperation.rosinstall  baxter_telop.rosinstall  package.xml  setup.py
baxter_benchmark/: CMakeLists.txt  package.xml  setup.py
baxter_benchmark/config/: repeatability.yaml
baxter_benchmark/launch/: repeatability_benchmark.launch
baxter_benchmark/nodes/: repeatability_benchmark.py
baxter_openrave/: CMakeLists.txt  package.xml
baxter_openrave/launch/: generate_ik_metrics.launch  reachability_workspace.launch
baxter_openrave/openrave/: baxter.robot.xml
baxter_openrave/scripts/: generate_dae_files.sh  generate_ikfast_solvers.sh  generate_kinematicreachability.sh
baxter_teleop/: CMakeLists.txt  package.xml  setup.py
baxter_teleop/config/: cartesian_controller.rviz  cartesian_controller.yaml  jt_cartesian_controller.yaml  priovr_baxter.yaml  tracker_params.yaml
baxter_teleop/launch/: cartesian_controller.launch  jt_cartesian_controller.launch  kinematics_services.xml  priovr_cart_teleop.launch  priovr_joint_teleop.launch  pykdl_cartesian_controller.launch
baxter_teleop/nodes/: .gitignore  joy_grippers_controller.py  jt_cartesian_controller.py  kinect_joint_controller.py  priovr_cart_coupling.py  priovr_jnt_velocity_controller.py  priovr_joint_controller.py  pykdl_cartesian_controller.py
baxter_teleop/scripts/: arms_to_zero.py  move_to_neutral.py  setup_cameras.py  setup_head_camera.py  trajectory_trial.py
baxter_teleop/src/: build_metrics_index.cpp  cartesian_controller.cpp
baxter_teleop/src/baxter_teleop/: __init__.py  utils.py
baxter_teleoperation/: CMakeLists.txt  package.xml
config/: cartesian_controller.rviz  depth_A00361A06910105A.yaml  kinect_side_link_transform.yaml  kinect_top_link_transform.yaml  priovr_params.yaml  rate_position.rviz  rgb_A00361A06910105A.yaml  rgb_A00364806917049A.yaml  tracker_params.yaml
config/calibration/: depth_A00364806917049A.yaml
launch/: build_metrics_indexes.launch  cartesian_controller.launch  generate_ik_metrics.launch  imu_joint_controller.launch  joint_tracker_test.launch  kinematic_services.launch  kinematics_services.launch  phantom_master.launch  position_mode_benchmark.launch  priovr_teleop.launch  test.xml  tracker_master.launch
nodes/: position_mode_benchmark.py  priovr_joint_controller.py
openrave/: baxter.robot.xml  baxter_arm.left.dae  baxter_arm.left.robot.xml  baxter_arm.right.dae  baxter_arm.right.robot.xml
scripts/: arms_to_zero.py  generate_dae_files.sh  generate_ik_metrics.py  generate_ikfast_solvers.sh  generate_kinematicreachability.sh  k4w2_interface.py  tracker_joint_controller.py
src/: build_metrics_index.cpp  cartesian_controller.cpp
urdf/: baxter.urdf
