<?xml version="1.0"?>
<package>
  <name>baxter_teleop</name>
  <description>The baxter_teleop package</description>
  
  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/baxter_teleop</url>
  <url type="repository">https://github.com/fsuarez6/baxter_teleop</url>
  <author>Francisco Suarez-Ruiz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>moveit_kinematics_interface</build_depend>
  <build_depend>rate_position_controller</build_depend>
  
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_moveit_config</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>moveit_ikfast</run_depend>
  <run_depend>moveit_kinematics_interface</run_depend>
  <run_depend>rate_position_controller</run_depend>

</package>
