<?xml version="1.0"?>
<package>
  <name>baxter_teleoperation</name>
  <description>
    The baxter_teleoperation metapackage
  </description>
  
  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/baxter_teleoperation</url>
  <url type="repository">https://github.com/fsuarez6/baxter_teleoperation</url>
  <author>Francisco Suarez-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxter_teleop</run_depend>
  <run_depend>baxter_benchmark</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
